# decco

./: Makefile  decco.opam  dune-project
.github/workflows/: ppx-push.yaml
lib/: Decco.re  Decco_Codecs.re  dune
ppx/: Polyvariants.re  Variants.re  dune
test/: OpenBelt.re  TestUtils.re  dune  test.re
